# rust-statusline

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  pricing.json  release-plz.toml
.github/workflows/: ci.yml  release.yml
src/: beads.rs  cache.rs  cli.rs  config.rs  db.rs  display.rs  doctor.rs  gastown.rs  git.rs  lib.rs  main.rs  pricing.rs  provenance.rs  sessions.rs  tokens.rs  usage.rs  usage_api.rs  utils.rs  window.rs
src/models/: beads.rs  block.rs  entry.rs  gastown.rs  git.rs  hook.rs  message.rs  mod.rs  prompt_cache.rs  ratelimit.rs  sessions.rs
tests/: concurrent_db_test.rs  config_cli.rs  display_toggles.rs  hook_parsing.rs  json_output.rs  output_style_test.rs  presets.rs  subsystems.rs  window_tests.rs  window_usage_test.rs
