[package]
name = "claude_statusline"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive","env"] }
owo-colors = "4.0"
globwalk = "0.9"
directories = "5.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.9"
once_cell = "1.19"
memchr = "2.7"
gix = { version = "0.66", default-features = true }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
