[package]
name = "claude_statusline"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive","env"] }
owo-colors = { version = "4.0", optional = true }
globwalk = "0.9"
directories = "5.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
gix = { version = "0.66", default-features = true, optional = true }
once_cell = "1.19"
regex = "1.10"
ureq = { version = "2.9", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
terminal_size = "0.3"

[features]
default = ["git", "colors"]
git = ["dep:gix"]
colors = ["dep:owo-colors"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true


[dev-dependencies]
tempfile = "3.10"
serial_test = "3.0"
